ntdll: Force gstreamer to only use x11 for GST_GL_WINDOW

Proton only uses x11, however users using it outside of the
steamos/steamdeck environment (such as on wayland desktops
or with other applications such as Lutris, Heroic, Bottles,
and so on) tend to hit a bug with gstreamer:

"GStreamer with OpenGL creates an empty "OpenGL Renderer" window on Wayland"
https://gitlab.freedesktop.org/gstreamer/gstreamer/-/issues/2997

There is an upstream merged MR in gstreamer that adds
support for EGL_MESA_platform_surfaceless:

https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/5511

However this is not necessary if we instead force GST_GL_WINDOW=x11 even
on wayland, it avoids the empty "OpenGL Renderer" windows on wayland.